# Chatbot

./: .gitignore  README.md  chat.db  conversas.db  db.py  db.sqlite3  db2.py  main.py  memory.db  modulo.py  pyproject.toml  requirements.txt  requriment.txt  sara.py  train_sara.py  ui.py
env/: pyvenv.cfg
static/config/: config.py  temp.txt
static/config/cache/: temp.txt
static/functions/: bots.py  config.py  functions.py
static/memory/: admin.json  data.json  description.json  family.json  memory.json  personality.json  rules.json
test/: test1.py
test/extra/: descubra_vozes_do_pc.py  microphone.py  test1.py  test_voice.py
test/trash/: carrega.py  conversa.json  flask2.py  friends.json  funtions.py  memory.py  micrfone.py  task.py  telegram_test.py  test.py
