[tool.poetry]
name = "sara-tkinter-wa"
version = "0.1.0"
description = "Sara personal assistant for linux and windows"
authors = ["wendellas(Wendel Alves), Luiz"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "sara_tkinter_wa"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.1"
chatterbot-corpus = "1.2.0"
chatterbot = "1.0.4"
pytz = "^2022.7.1"
openai = "^0.26.4"
player = "^0.6.1"
plyer = "^2.1.0"
pyttsx3 = "^2.90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
